Project2--Complete C Compiler/current-workingDCE/s3.y.output
Terminals which are not used

   LPAREN
   RPAREN
   EQ
   PCODE_NE
   PCODE_GT
   PCODE_GE
   PCODE_EQ
   PCODE_LE
   PCODE_LT
   PTYPE_AND
   PTYPE_OR
   PTYPE_UNC
   JMP
   RTI
   PREDICATE
   STRING


Grammar

    0 $accept: inst_list $end

    1 inst_list: inst_list inst_p
    2          | inst_p

    3 inst_p: label_opt inst ENDLINE
    4       | label_opt inst INST_SEP
    5       | label_opt ENDLINE

    6 label_opt: /* empty */
    7          | LABEL

    8 inst: ADD REGISTER COMMA REGISTER COMMA REGISTER
    9     | ADD REGISTER COMMA REGISTER COMMA IMM
   10     | AND REGISTER COMMA REGISTER COMMA REGISTER
   11     | AND REGISTER COMMA REGISTER COMMA IMM
   12     | ANDL REGISTER COMMA REGISTER COMMA REGISTER
   13     | ANDL REGISTER COMMA REGISTER COMMA IMM
   14     | BR REGISTER COMMA LABEL
   15     | BR BR_CC REGISTER COMMA LABEL
   16     | BRA LABEL
   17     | DIV REGISTER COMMA REGISTER COMMA REGISTER
   18     | DIV REGISTER COMMA REGISTER COMMA IMM
   19     | JSR LABEL
   20     | JSRR REGISTER
   21     | LDI REGISTER COMMA LABEL
   22     | LDI REGISTER COMMA IMM
   23     | LDR REGISTER COMMA REGISTER COMMA REGISTER
   24     | LDR REGISTER COMMA REGISTER COMMA IMM
   25     | LD REGISTER COMMA LABEL
   26     | LD REGISTER COMMA IMM
   27     | LEA REGISTER COMMA LABEL
   28     | LEA REGISTER COMMA IMM
   29     | MUL REGISTER COMMA REGISTER COMMA REGISTER
   30     | MUL REGISTER COMMA REGISTER COMMA IMM
   31     | NOP
   32     | NOT REGISTER COMMA REGISTER
   33     | NOTL REGISTER COMMA REGISTER
   34     | OR REGISTER COMMA REGISTER COMMA REGISTER
   35     | OR REGISTER COMMA REGISTER COMMA IMM
   36     | ORL REGISTER COMMA REGISTER COMMA REGISTER
   37     | ORL REGISTER COMMA REGISTER COMMA IMM
   38     | RET
   39     | SET REGISTER COMMA IMM
   40     | STI REGISTER COMMA LABEL
   41     | STI REGISTER COMMA IMM
   42     | STR REGISTER COMMA REGISTER COMMA REGISTER
   43     | STR REGISTER COMMA REGISTER COMMA IMM
   44     | ST REGISTER COMMA LABEL
   45     | ST REGISTER COMMA IMM
   46     | SUB REGISTER COMMA REGISTER COMMA REGISTER
   47     | SUB REGISTER COMMA REGISTER COMMA IMM
   48     | TRAP IMM
   49     | HALT
   50     | IN
   51     | OUT
   52     | GETC
   53     | PUTS
   54     | PUTSP


Terminals, with rules where they appear

$end (0) 0
error (256)
INST_SEP (258) 4
ENDLINE (259) 3 5
LPAREN (260)
RPAREN (261)
COMMA (262) 8 9 10 11 12 13 14 15 17 18 21 22 23 24 25 26 27 28 29
    30 32 33 34 35 36 37 39 40 41 42 43 44 45 46 47
EQ (263)
BR_CC (264) 15
PCODE_NE (265)
PCODE_GT (266)
PCODE_GE (267)
PCODE_EQ (268)
PCODE_LE (269)
PCODE_LT (270)
PTYPE_AND (271)
PTYPE_OR (272)
PTYPE_UNC (273)
ADD (274) 8 9
AND (275) 10 11
ANDL (276) 12 13
BR (277) 14 15
BRA (278) 16
DIV (279) 17 18
JMP (280)
JSRR (281) 20
JSR (282) 19
LDI (283) 21 22
LDR (284) 23 24
LD (285) 25 26
LEA (286) 27 28
MUL (287) 29 30
NOP (288) 31
NOT (289) 32
NOTL (290) 33
OR (291) 34 35
ORL (292) 36 37
RTI (293)
RET (294) 38
SET (295) 39
STI (296) 40 41
STR (297) 42 43
ST (298) 44 45
SUB (299) 46 47
TRAP (300) 48
HALT (301) 49
IN (302) 50
OUT (303) 51
GETC (304) 52
PUTS (305) 53
PUTSP (306) 54
REGISTER (307) 8 9 10 11 12 13 14 15 17 18 20 21 22 23 24 25 26 27
    28 29 30 32 33 34 35 36 37 39 40 41 42 43 44 45 46 47
LABEL (308) 7 14 15 16 19 21 25 27 40 44
IMM (309) 9 11 13 18 22 24 26 28 30 35 37 39 41 43 45 47 48
PREDICATE (310)
STRING (311)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
inst_list (58)
    on left: 1 2, on right: 0 1
inst_p (59)
    on left: 3 4 5, on right: 1 2
label_opt (60)
    on left: 6 7, on right: 3 4 5
inst (61)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54, on right: 3 4


state 0

    0 $accept: . inst_list $end

    LABEL  shift, and go to state 1

    $default  reduce using rule 6 (label_opt)

    inst_list  go to state 2
    inst_p     go to state 3
    label_opt  go to state 4


state 1

    7 label_opt: LABEL .

    $default  reduce using rule 7 (label_opt)


state 2

    0 $accept: inst_list . $end
    1 inst_list: inst_list . inst_p

    $end   shift, and go to state 5
    LABEL  shift, and go to state 1

    $default  reduce using rule 6 (label_opt)

    inst_p     go to state 6
    label_opt  go to state 4


state 3

    2 inst_list: inst_p .

    $default  reduce using rule 2 (inst_list)


state 4

    3 inst_p: label_opt . inst ENDLINE
    4       | label_opt . inst INST_SEP
    5       | label_opt . ENDLINE

    ENDLINE  shift, and go to state 7
    ADD      shift, and go to state 8
    AND      shift, and go to state 9
    ANDL     shift, and go to state 10
    BR       shift, and go to state 11
    BRA      shift, and go to state 12
    DIV      shift, and go to state 13
    JSRR     shift, and go to state 14
    JSR      shift, and go to state 15
    LDI      shift, and go to state 16
    LDR      shift, and go to state 17
    LD       shift, and go to state 18
    LEA      shift, and go to state 19
    MUL      shift, and go to state 20
    NOP      shift, and go to state 21
    NOT      shift, and go to state 22
    NOTL     shift, and go to state 23
    OR       shift, and go to state 24
    ORL      shift, and go to state 25
    RET      shift, and go to state 26
    SET      shift, and go to state 27
    STI      shift, and go to state 28
    STR      shift, and go to state 29
    ST       shift, and go to state 30
    SUB      shift, and go to state 31
    TRAP     shift, and go to state 32
    HALT     shift, and go to state 33
    IN       shift, and go to state 34
    OUT      shift, and go to state 35
    GETC     shift, and go to state 36
    PUTS     shift, and go to state 37
    PUTSP    shift, and go to state 38

    inst  go to state 39


state 5

    0 $accept: inst_list $end .

    $default  accept


state 6

    1 inst_list: inst_list inst_p .

    $default  reduce using rule 1 (inst_list)


state 7

    5 inst_p: label_opt ENDLINE .

    $default  reduce using rule 5 (inst_p)


state 8

    8 inst: ADD . REGISTER COMMA REGISTER COMMA REGISTER
    9     | ADD . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 40


state 9

   10 inst: AND . REGISTER COMMA REGISTER COMMA REGISTER
   11     | AND . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 41


state 10

   12 inst: ANDL . REGISTER COMMA REGISTER COMMA REGISTER
   13     | ANDL . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 42


state 11

   14 inst: BR . REGISTER COMMA LABEL
   15     | BR . BR_CC REGISTER COMMA LABEL

    BR_CC     shift, and go to state 43
    REGISTER  shift, and go to state 44


state 12

   16 inst: BRA . LABEL

    LABEL  shift, and go to state 45


state 13

   17 inst: DIV . REGISTER COMMA REGISTER COMMA REGISTER
   18     | DIV . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 46


state 14

   20 inst: JSRR . REGISTER

    REGISTER  shift, and go to state 47


state 15

   19 inst: JSR . LABEL

    LABEL  shift, and go to state 48


state 16

   21 inst: LDI . REGISTER COMMA LABEL
   22     | LDI . REGISTER COMMA IMM

    REGISTER  shift, and go to state 49


state 17

   23 inst: LDR . REGISTER COMMA REGISTER COMMA REGISTER
   24     | LDR . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 50


state 18

   25 inst: LD . REGISTER COMMA LABEL
   26     | LD . REGISTER COMMA IMM

    REGISTER  shift, and go to state 51


state 19

   27 inst: LEA . REGISTER COMMA LABEL
   28     | LEA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 52


state 20

   29 inst: MUL . REGISTER COMMA REGISTER COMMA REGISTER
   30     | MUL . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 53


state 21

   31 inst: NOP .

    $default  reduce using rule 31 (inst)


state 22

   32 inst: NOT . REGISTER COMMA REGISTER

    REGISTER  shift, and go to state 54


state 23

   33 inst: NOTL . REGISTER COMMA REGISTER

    REGISTER  shift, and go to state 55


state 24

   34 inst: OR . REGISTER COMMA REGISTER COMMA REGISTER
   35     | OR . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 56


state 25

   36 inst: ORL . REGISTER COMMA REGISTER COMMA REGISTER
   37     | ORL . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 57


state 26

   38 inst: RET .

    $default  reduce using rule 38 (inst)


state 27

   39 inst: SET . REGISTER COMMA IMM

    REGISTER  shift, and go to state 58


state 28

   40 inst: STI . REGISTER COMMA LABEL
   41     | STI . REGISTER COMMA IMM

    REGISTER  shift, and go to state 59


state 29

   42 inst: STR . REGISTER COMMA REGISTER COMMA REGISTER
   43     | STR . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 60


state 30

   44 inst: ST . REGISTER COMMA LABEL
   45     | ST . REGISTER COMMA IMM

    REGISTER  shift, and go to state 61


state 31

   46 inst: SUB . REGISTER COMMA REGISTER COMMA REGISTER
   47     | SUB . REGISTER COMMA REGISTER COMMA IMM

    REGISTER  shift, and go to state 62


state 32

   48 inst: TRAP . IMM

    IMM  shift, and go to state 63


state 33

   49 inst: HALT .

    $default  reduce using rule 49 (inst)


state 34

   50 inst: IN .

    $default  reduce using rule 50 (inst)


state 35

   51 inst: OUT .

    $default  reduce using rule 51 (inst)


state 36

   52 inst: GETC .

    $default  reduce using rule 52 (inst)


state 37

   53 inst: PUTS .

    $default  reduce using rule 53 (inst)


state 38

   54 inst: PUTSP .

    $default  reduce using rule 54 (inst)


state 39

    3 inst_p: label_opt inst . ENDLINE
    4       | label_opt inst . INST_SEP

    INST_SEP  shift, and go to state 64
    ENDLINE   shift, and go to state 65


state 40

    8 inst: ADD REGISTER . COMMA REGISTER COMMA REGISTER
    9     | ADD REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 66


state 41

   10 inst: AND REGISTER . COMMA REGISTER COMMA REGISTER
   11     | AND REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 67


state 42

   12 inst: ANDL REGISTER . COMMA REGISTER COMMA REGISTER
   13     | ANDL REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 68


state 43

   15 inst: BR BR_CC . REGISTER COMMA LABEL

    REGISTER  shift, and go to state 69


state 44

   14 inst: BR REGISTER . COMMA LABEL

    COMMA  shift, and go to state 70


state 45

   16 inst: BRA LABEL .

    $default  reduce using rule 16 (inst)


state 46

   17 inst: DIV REGISTER . COMMA REGISTER COMMA REGISTER
   18     | DIV REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 71


state 47

   20 inst: JSRR REGISTER .

    $default  reduce using rule 20 (inst)


state 48

   19 inst: JSR LABEL .

    $default  reduce using rule 19 (inst)


state 49

   21 inst: LDI REGISTER . COMMA LABEL
   22     | LDI REGISTER . COMMA IMM

    COMMA  shift, and go to state 72


state 50

   23 inst: LDR REGISTER . COMMA REGISTER COMMA REGISTER
   24     | LDR REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 73


state 51

   25 inst: LD REGISTER . COMMA LABEL
   26     | LD REGISTER . COMMA IMM

    COMMA  shift, and go to state 74


state 52

   27 inst: LEA REGISTER . COMMA LABEL
   28     | LEA REGISTER . COMMA IMM

    COMMA  shift, and go to state 75


state 53

   29 inst: MUL REGISTER . COMMA REGISTER COMMA REGISTER
   30     | MUL REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 76


state 54

   32 inst: NOT REGISTER . COMMA REGISTER

    COMMA  shift, and go to state 77


state 55

   33 inst: NOTL REGISTER . COMMA REGISTER

    COMMA  shift, and go to state 78


state 56

   34 inst: OR REGISTER . COMMA REGISTER COMMA REGISTER
   35     | OR REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 79


state 57

   36 inst: ORL REGISTER . COMMA REGISTER COMMA REGISTER
   37     | ORL REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 80


state 58

   39 inst: SET REGISTER . COMMA IMM

    COMMA  shift, and go to state 81


state 59

   40 inst: STI REGISTER . COMMA LABEL
   41     | STI REGISTER . COMMA IMM

    COMMA  shift, and go to state 82


state 60

   42 inst: STR REGISTER . COMMA REGISTER COMMA REGISTER
   43     | STR REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 83


state 61

   44 inst: ST REGISTER . COMMA LABEL
   45     | ST REGISTER . COMMA IMM

    COMMA  shift, and go to state 84


state 62

   46 inst: SUB REGISTER . COMMA REGISTER COMMA REGISTER
   47     | SUB REGISTER . COMMA REGISTER COMMA IMM

    COMMA  shift, and go to state 85


state 63

   48 inst: TRAP IMM .

    $default  reduce using rule 48 (inst)


state 64

    4 inst_p: label_opt inst INST_SEP .

    $default  reduce using rule 4 (inst_p)


state 65

    3 inst_p: label_opt inst ENDLINE .

    $default  reduce using rule 3 (inst_p)


state 66

    8 inst: ADD REGISTER COMMA . REGISTER COMMA REGISTER
    9     | ADD REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 86


state 67

   10 inst: AND REGISTER COMMA . REGISTER COMMA REGISTER
   11     | AND REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 87


state 68

   12 inst: ANDL REGISTER COMMA . REGISTER COMMA REGISTER
   13     | ANDL REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 88


state 69

   15 inst: BR BR_CC REGISTER . COMMA LABEL

    COMMA  shift, and go to state 89


state 70

   14 inst: BR REGISTER COMMA . LABEL

    LABEL  shift, and go to state 90


state 71

   17 inst: DIV REGISTER COMMA . REGISTER COMMA REGISTER
   18     | DIV REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 91


state 72

   21 inst: LDI REGISTER COMMA . LABEL
   22     | LDI REGISTER COMMA . IMM

    LABEL  shift, and go to state 92
    IMM    shift, and go to state 93


state 73

   23 inst: LDR REGISTER COMMA . REGISTER COMMA REGISTER
   24     | LDR REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 94


state 74

   25 inst: LD REGISTER COMMA . LABEL
   26     | LD REGISTER COMMA . IMM

    LABEL  shift, and go to state 95
    IMM    shift, and go to state 96


state 75

   27 inst: LEA REGISTER COMMA . LABEL
   28     | LEA REGISTER COMMA . IMM

    LABEL  shift, and go to state 97
    IMM    shift, and go to state 98


state 76

   29 inst: MUL REGISTER COMMA . REGISTER COMMA REGISTER
   30     | MUL REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 99


state 77

   32 inst: NOT REGISTER COMMA . REGISTER

    REGISTER  shift, and go to state 100


state 78

   33 inst: NOTL REGISTER COMMA . REGISTER

    REGISTER  shift, and go to state 101


state 79

   34 inst: OR REGISTER COMMA . REGISTER COMMA REGISTER
   35     | OR REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 102


state 80

   36 inst: ORL REGISTER COMMA . REGISTER COMMA REGISTER
   37     | ORL REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 103


state 81

   39 inst: SET REGISTER COMMA . IMM

    IMM  shift, and go to state 104


state 82

   40 inst: STI REGISTER COMMA . LABEL
   41     | STI REGISTER COMMA . IMM

    LABEL  shift, and go to state 105
    IMM    shift, and go to state 106


state 83

   42 inst: STR REGISTER COMMA . REGISTER COMMA REGISTER
   43     | STR REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 107


state 84

   44 inst: ST REGISTER COMMA . LABEL
   45     | ST REGISTER COMMA . IMM

    LABEL  shift, and go to state 108
    IMM    shift, and go to state 109


state 85

   46 inst: SUB REGISTER COMMA . REGISTER COMMA REGISTER
   47     | SUB REGISTER COMMA . REGISTER COMMA IMM

    REGISTER  shift, and go to state 110


state 86

    8 inst: ADD REGISTER COMMA REGISTER . COMMA REGISTER
    9     | ADD REGISTER COMMA REGISTER . COMMA IMM

    COMMA  shift, and go to state 111


state 87

   10 inst: AND REGISTER COMMA REGISTER . COMMA REGISTER
   11     | AND REGISTER COMMA REGISTER . COMMA IMM

    COMMA  shift, and go to state 112


state 88

   12 inst: ANDL REGISTER COMMA REGISTER . COMMA REGISTER
   13     | ANDL REGISTER COMMA REGISTER . COMMA IMM

    COMMA  shift, and go to state 113


state 89

   15 inst: BR BR_CC REGISTER COMMA . LABEL

    LABEL  shift, and go to state 114


state 90

   14 inst: BR REGISTER COMMA LABEL .

    $default  reduce using rule 14 (inst)


state 91

   17 inst: DIV REGISTER COMMA REGISTER . COMMA REGISTER
   18     | DIV REGISTER COMMA REGISTER . COMMA IMM

    COMMA  shift, and go to state 115


state 92

   21 inst: LDI REGISTER COMMA LABEL .

    $default  reduce using rule 21 (inst)


state 93

   22 inst: LDI REGISTER COMMA IMM .

    $default  reduce using rule 22 (inst)


state 94

   23 inst: LDR REGISTER COMMA REGISTER . COMMA REGISTER
   24     | LDR REGISTER COMMA REGISTER . COMMA IMM

    COMMA  shift, and go to state 116


state 95

   25 inst: LD REGISTER COMMA LABEL .

    $default  reduce using rule 25 (inst)


state 96

   26 inst: LD REGISTER COMMA IMM .

    $default  reduce using rule 26 (inst)


state 97

   27 inst: LEA REGISTER COMMA LABEL .

    $default  reduce using rule 27 (inst)


state 98
